tests/snapshots/rust_ast_from_lir__rust_ast_from_lir_transformation_for_blinking.snap
---
source: tests/rust_ast_from_lir.rs
expression: project
---
directory: ""
files:
  - path: src/counter_o.rs
    items:
      - Structure:
          public_visibility: true
          name: CounterOInput
          fields:
            - public_visibility: true
              name: res
              type:
                Identifier:
                  identifier: bool
            - public_visibility: true
              name: tick
              type:
                Identifier:
                  identifier: bool
      - Structure:
          public_visibility: true
          name: CounterOState
          fields:
            - public_visibility: false
              name: mem_o
              type:
                Identifier:
                  identifier: i64
      - Implementation:
          trait_name: ~
          type_name: CounterOState
          items:
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: init
                  receiver: ~
                  inputs: []
                  output:
                    Identifier:
                      identifier: CounterOState
                body:
                  statements:
                    - ExpressionLast:
                        Structure:
                          name: CounterOState
                          fields:
                            - name: mem_o
                              expression:
                                Literal:
                                  literal:
                                    Integer: 0
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: step
                  receiver:
                    reference: true
                    mutable: true
                  inputs:
                    - - input
                      - Identifier:
                          identifier: CounterOInput
                  output:
                    Identifier:
                      identifier: i64
                body:
                  statements:
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: inc
                        expression:
                          IfThenElse:
                            condition:
                              FieldAccess:
                                expression:
                                  Identifier:
                                    identifier: input
                                field: tick
                            then_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 1
                            else_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 0
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: o
                        expression:
                          IfThenElse:
                            condition:
                              FieldAccess:
                                expression:
                                  Identifier:
                                    identifier: input
                                field: res
                            then_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 0
                            else_branch:
                              statements:
                                - ExpressionLast:
                                    Binary:
                                      left:
                                        Unary:
                                          operator: Brackets
                                          expression:
                                            FieldAccess:
                                              expression:
                                                Identifier:
                                                  identifier: self
                                              field: mem_o
                                      operator: Add
                                      right:
                                        Identifier:
                                          identifier: inc
                    - ExpressionIntern:
                        Assignement:
                          left:
                            FieldAccess:
                              expression:
                                Identifier:
                                  identifier: self
                              field: mem_o
                          right:
                            Identifier:
                              identifier: o
                    - ExpressionLast:
                        Identifier:
                          identifier: o
  - path: src/blinking_status.rs
    items:
      - Import:
          Use:
            public_visibility: false
            tree:
              Path:
                module_name: crate
                tree:
                  Path:
                    module_name: counter_o
                    tree: Star
      - Import:
          Use:
            public_visibility: false
            tree:
              Path:
                module_name: crate
                tree:
                  Path:
                    module_name: functions
                    tree:
                      Name:
                        name: xor
                        alias: ~
      - Structure:
          public_visibility: true
          name: BlinkingStatusInput
          fields:
            - public_visibility: true
              name: tick_number
              type:
                Identifier:
                  identifier: i64
      - Structure:
          public_visibility: true
          name: BlinkingStatusState
          fields:
            - public_visibility: false
              name: mem_on_off
              type:
                Identifier:
                  identifier: bool
            - public_visibility: false
              name: mem_res
              type:
                Identifier:
                  identifier: bool
            - public_visibility: false
              name: counter_o_counter
              type:
                Identifier:
                  identifier: CounterOState
      - Implementation:
          trait_name: ~
          type_name: BlinkingStatusState
          items:
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: init
                  receiver: ~
                  inputs: []
                  output:
                    Identifier:
                      identifier: BlinkingStatusState
                body:
                  statements:
                    - ExpressionLast:
                        Structure:
                          name: BlinkingStatusState
                          fields:
                            - name: mem_on_off
                              expression:
                                Literal:
                                  literal:
                                    Boolean: true
                            - name: mem_res
                              expression:
                                Literal:
                                  literal:
                                    Boolean: true
                            - name: counter_o_counter
                              expression:
                                FunctionCall:
                                  function:
                                    Identifier:
                                      identifier: "CounterOState::init"
                                  arguments: []
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: step
                  receiver:
                    reference: true
                    mutable: true
                  inputs:
                    - - input
                      - Identifier:
                          identifier: BlinkingStatusInput
                  output:
                    Identifier:
                      identifier: i64
                body:
                  statements:
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: res
                        expression:
                          FieldAccess:
                            expression:
                              Identifier:
                                identifier: self
                            field: mem_res
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: x
                        expression:
                          Literal:
                            literal:
                              Boolean: true
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: counter
                        expression:
                          MethodCall:
                            receiver:
                              FieldAccess:
                                expression:
                                  Identifier:
                                    identifier: self
                                field: counter_o_counter
                            method: step
                            arguments:
                              - Structure:
                                  name: CounterOInput
                                  fields:
                                    - name: res
                                      expression:
                                        Identifier:
                                          identifier: res
                                    - name: tick
                                      expression:
                                        Identifier:
                                          identifier: x
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: on_off
                        expression:
                          FunctionCall:
                            function:
                              Identifier:
                                identifier: xor
                            arguments:
                              - Identifier:
                                  identifier: res
                              - FieldAccess:
                                  expression:
                                    Identifier:
                                      identifier: self
                                  field: mem_on_off
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: status
                        expression:
                          IfThenElse:
                            condition:
                              Identifier:
                                identifier: on_off
                            then_branch:
                              statements:
                                - ExpressionLast:
                                    Binary:
                                      left:
                                        Identifier:
                                          identifier: counter
                                      operator: Add
                                      right:
                                        Literal:
                                          literal:
                                            Integer: 1
                            else_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 0
                    - ExpressionIntern:
                        Assignement:
                          left:
                            FieldAccess:
                              expression:
                                Identifier:
                                  identifier: self
                              field: mem_on_off
                          right:
                            Identifier:
                              identifier: on_off
                    - ExpressionIntern:
                        Assignement:
                          left:
                            FieldAccess:
                              expression:
                                Identifier:
                                  identifier: self
                              field: mem_res
                          right:
                            Unary:
                              operator: Brackets
                              expression:
                                Binary:
                                  left:
                                    Binary:
                                      left:
                                        Identifier:
                                          identifier: counter
                                      operator: Add
                                      right:
                                        Literal:
                                          literal:
                                            Integer: 1
                                  operator: Eq
                                  right:
                                    FieldAccess:
                                      expression:
                                        Identifier:
                                          identifier: input
                                      field: tick_number
                    - ExpressionLast:
                        Identifier:
                          identifier: status
  - path: src/functions.rs
    items:
      - Function:
          signature:
            public_visibility: true
            name: xor
            receiver: ~
            inputs:
              - - t
                - Identifier:
                    identifier: bool
              - - b
                - Identifier:
                    identifier: bool
            output:
              Identifier:
                identifier: bool
          body:
            statements:
              - ExpressionLast:
                  IfThenElse:
                    condition:
                      Identifier:
                        identifier: t
                    then_branch:
                      statements:
                        - ExpressionLast:
                            Unary:
                              operator: Not
                              expression:
                                Identifier:
                                  identifier: b
                    else_branch:
                      statements:
                        - ExpressionLast:
                            Identifier:
                              identifier: b
  - path: src/typedefs.rs
    items: []
  - path: src/lib.rs
    items:
      - Import:
          Module:
            public_visibility: true
            name: counter_o
      - Import:
          Module:
            public_visibility: true
            name: blinking_status
      - Import:
          Module:
            public_visibility: true
            name: functions
      - Import:
          Module:
            public_visibility: true
            name: typedefs

