tests/snapshots/rust_ast_from_lir__rust_ast_from_lir_transformation_for_counter.snap
---
source: tests/rust_ast_from_lir.rs
expression: project
---
directory: ""
files:
  - path: src/counter_o.rs
    items:
      - Structure:
          public_visibility: true
          name: CounterOInput
          fields:
            - public_visibility: true
              name: res
              type:
                Identifier:
                  identifier: bool
            - public_visibility: true
              name: tick
              type:
                Identifier:
                  identifier: bool
      - Structure:
          public_visibility: true
          name: CounterOState
          fields:
            - public_visibility: false
              name: mem_o
              type:
                Identifier:
                  identifier: i64
      - Implementation:
          trait_name: ~
          type_name: CounterOState
          items:
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: init
                  receiver: ~
                  inputs: []
                  output:
                    Identifier:
                      identifier: CounterOState
                body:
                  statements:
                    - ExpressionLast:
                        Structure:
                          name: CounterOState
                          fields:
                            - name: mem_o
                              expression:
                                Literal:
                                  literal:
                                    Integer: 0
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: step
                  receiver:
                    reference: false
                    mutable: false
                  inputs:
                    - - input
                      - Identifier:
                          identifier: CounterOInput
                  output:
                    Tuple:
                      elements:
                        - Identifier:
                            identifier: CounterOState
                        - Identifier:
                            identifier: i64
                body:
                  statements:
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: inc
                        expression:
                          IfThenElse:
                            condition:
                              FieldAccess:
                                expression:
                                  Identifier:
                                    identifier: input
                                field: tick
                            then_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 1
                            else_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 0
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: o
                        expression:
                          IfThenElse:
                            condition:
                              FieldAccess:
                                expression:
                                  Identifier:
                                    identifier: input
                                field: res
                            then_branch:
                              statements:
                                - ExpressionLast:
                                    Literal:
                                      literal:
                                        Integer: 0
                            else_branch:
                              statements:
                                - ExpressionLast:
                                    Binary:
                                      left:
                                        Unary:
                                          operator: Brackets
                                          expression:
                                            FieldAccess:
                                              expression:
                                                Identifier:
                                                  identifier: self
                                              field: mem_o
                                      operator: Add
                                      right:
                                        Identifier:
                                          identifier: inc
                    - ExpressionLast:
                        Tuple:
                          elements:
                            - Structure:
                                name: CounterOState
                                fields:
                                  - name: mem_o
                                    expression:
                                      Identifier:
                                        identifier: o
                            - Identifier:
                                identifier: o
  - path: src/main_y.rs
    items:
      - Import:
          Use:
            public_visibility: false
            tree:
              Path:
                module_name: crate
                tree:
                  Path:
                    module_name: counter_o
                    tree: Star
      - Structure:
          public_visibility: true
          name: MainYInput
          fields: []
      - Structure:
          public_visibility: true
          name: MainYState
          fields:
            - public_visibility: false
              name: mem_half
              type:
                Identifier:
                  identifier: bool
            - public_visibility: false
              name: mem_x
              type:
                Identifier:
                  identifier: bool
            - public_visibility: false
              name: counter_o_y
              type:
                Identifier:
                  identifier: CounterOState
      - Implementation:
          trait_name: ~
          type_name: MainYState
          items:
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: init
                  receiver: ~
                  inputs: []
                  output:
                    Identifier:
                      identifier: MainYState
                body:
                  statements:
                    - ExpressionLast:
                        Structure:
                          name: MainYState
                          fields:
                            - name: mem_half
                              expression:
                                Literal:
                                  literal:
                                    Boolean: true
                            - name: mem_x
                              expression:
                                Literal:
                                  literal:
                                    Boolean: false
                            - name: counter_o_y
                              expression:
                                FunctionCall:
                                  function:
                                    Identifier:
                                      identifier: "CounterOState::init"
                                  arguments: []
            - AssociatedMethod:
                signature:
                  public_visibility: true
                  name: step
                  receiver:
                    reference: false
                    mutable: false
                  inputs:
                    - - input
                      - Identifier:
                          identifier: MainYInput
                  output:
                    Tuple:
                      elements:
                        - Identifier:
                            identifier: MainYState
                        - Identifier:
                            identifier: i64
                body:
                  statements:
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: half
                        expression:
                          FieldAccess:
                            expression:
                              Identifier:
                                identifier: self
                            field: mem_half
                    - Let:
                        pattern:
                          Identifier:
                            reference: false
                            mutable: false
                            identifier: x
                        expression:
                          FieldAccess:
                            expression:
                              Identifier:
                                identifier: self
                            field: mem_x
                    - Let:
                        pattern:
                          Tuple:
                            elements:
                              - Identifier:
                                  reference: false
                                  mutable: false
                                  identifier: counter_o_y
                              - Identifier:
                                  reference: false
                                  mutable: false
                                  identifier: y
                        expression:
                          MethodCall:
                            receiver:
                              FieldAccess:
                                expression:
                                  Identifier:
                                    identifier: self
                                field: counter_o_y
                            method: step
                            arguments:
                              - Structure:
                                  name: CounterOInput
                                  fields:
                                    - name: res
                                      expression:
                                        Identifier:
                                          identifier: x
                                    - name: tick
                                      expression:
                                        Identifier:
                                          identifier: half
                    - ExpressionLast:
                        Tuple:
                          elements:
                            - Structure:
                                name: MainYState
                                fields:
                                  - name: mem_half
                                    expression:
                                      Unary:
                                        operator: Not
                                        expression:
                                          Identifier:
                                            identifier: half
                                  - name: mem_x
                                    expression:
                                      Unary:
                                        operator: Brackets
                                        expression:
                                          Binary:
                                            left:
                                              Identifier:
                                                identifier: y
                                            operator: Grt
                                            right:
                                              Literal:
                                                literal:
                                                  Integer: 35
                                  - name: counter_o_y
                                    expression:
                                      Identifier:
                                        identifier: counter_o_y
                            - Identifier:
                                identifier: y
  - path: src/functions.rs
    items: []
  - path: src/typedefs.rs
    items: []
  - path: src/lib.rs
    items:
      - Import:
          Module:
            public_visibility: true
            name: counter_o
      - Import:
          Module:
            public_visibility: true
            name: main_y
      - Import:
          Module:
            public_visibility: true
            name: functions
      - Import:
          Module:
            public_visibility: true
            name: typedefs

